--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon app/index.js",
+    "start": "node app/index.js"
   },
   "jest": {
     "testEnvironments": "node"
@@ -17,11 +17,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "decimal.js": "^10.2.1",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "hex-to-binary": "^1.0.1",
+    "lowdb": "^1.0.0",
     "node-rsa": "^1.1.1",
     "request": "^2.88.2",
     "sha3": "^2.1.4",
