--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "dev": "nodemon app/index.js",
+    "dev": "nodemon --ignore './app/data.json' app/index.js",
     "start": "node app/index.js"
   },
   "jest": {
